--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,27 +2,27 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # corre todos os dias à meia-noite
-  workflow_dispatch:     # permite correr manualmente
+    - cron: "0 0 * * *"   
+  workflow_dispatch:       
+
+permissions:
+  contents: write          
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v3
-
-      - name: Gerar Snake
+      - name: Generate snake files
         uses: Platane/snk@v3
         with:
           github_user_name: GabrielLima00
           outputs: |
             dist/snake.svg
-            dist/snake.gif
+            dist/snake-dark.svg?palette=github-dark
 
-      - name: Publicar no branch "output"
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Publish to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
